<resources>
    <string name="app_name">Go2Shop</string>
    <string name="action_settings">Settings</string>
    <string name="action_payment">Payment</string>

    <string name="alert">Alert</string>
    <string name="rooted_message">Your device has been rooted. To protect your data safety, you are not allowed to use this app.</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="expiry">MM/YY</string>
    <string name="add_payment_method">Add Payment Method</string>
</resources>